; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_fd.c_fd_getflags.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_fd.c_fd_getflags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fd_getflags(%struct.fd* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fd*, align 8
  store %struct.fd* %0, %struct.fd** %3, align 8
  %4 = load %struct.fd*, %struct.fd** %3, align 8
  %5 = getelementptr inbounds %struct.fd, %struct.fd* %4, i32 0, i32 1
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = bitcast {}** %7 to i32 (%struct.fd*)**
  %9 = load i32 (%struct.fd*)*, i32 (%struct.fd*)** %8, align 8
  %10 = icmp ne i32 (%struct.fd*)* %9, null
  br i1 %10, label %11, label %20

11:                                               ; preds = %1
  %12 = load %struct.fd*, %struct.fd** %3, align 8
  %13 = getelementptr inbounds %struct.fd, %struct.fd* %12, i32 0, i32 1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = bitcast {}** %15 to i32 (%struct.fd*)**
  %17 = load i32 (%struct.fd*)*, i32 (%struct.fd*)** %16, align 8
  %18 = load %struct.fd*, %struct.fd** %3, align 8
  %19 = call i32 %17(%struct.fd* %18)
  store i32 %19, i32* %2, align 4
  br label %24

20:                                               ; preds = %1
  %21 = load %struct.fd*, %struct.fd** %3, align 8
  %22 = getelementptr inbounds %struct.fd, %struct.fd* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %20, %11
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
